# CuPBoP

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml  lint.yml
MICRO_AE_example/anti-coalescing-transformation/: hist.cu  run.sh
MICRO_AE_example/block-size-invariant-analysis/: vecadd.cu
MICRO_AE_example/tail-block-adaptive-synchronization/: run.sh  vecadd.cu
common/: debug.hpp
compilation/: CMakeLists.txt  HostTranslation.cpp  KernelTranslation.cpp
compilation/HostTranslation/: CMakeLists.txt
compilation/HostTranslation/include/: RemoveCudaBuiltin.h  ReplaceCudaBuiltin.h  ReplaceKernelArgs.h  ReplaceKernelLaunch.h
compilation/HostTranslation/include/cpu/: RemoveMetadata.h
compilation/HostTranslation/include/x86/: ReplaceConstantMemory.h
compilation/HostTranslation/lib/: GenerateHostStub.cpp  RemoveCudaBuiltin.cpp  ReplaceConstantMemory.cpp  ReplaceCudaBuiltin.cpp  ReplaceKernelArgs.cpp  ReplaceKernelLaunch.cpp
compilation/HostTranslation/src/cpu/: RemoveCudaBuiltin.cpp  RemoveMetadata.cpp  ReplaceConstantMemory.cpp  ReplaceCudaBuiltin.cpp  ReplaceKernelArgs.cpp
compilation/HostTranslation/src/x86/: InitializeDevice.cpp  RemoveCudaBuiltin.cpp  RemoveMetadata.cpp  ReplaceCudaBuiltin.cpp
compilation/KernelTranslation/: CMakeLists.txt
compilation/KernelTranslation/include/: generate_x86_format.h  init.h  insert_sync.h  insert_warp_loop.h  memory_hierarchy.h  performance.h  tool.h
compilation/KernelTranslation/include/cpu/: generate_cpu_format.h  warp_func.h
compilation/KernelTranslation/include/x86/: generate_x86_format.h  global_mem_coalescing_optimization.h  handle_sync.h  performance.h  tail_block_adaptive_sync_optimization.h  tool.h
compilation/KernelTranslation/lib/: generate_x86_format.cpp  handle_sync.cpp  init.cpp  insert_sync.cpp  insert_warp_loop.cpp  memory_hierarchy.cpp  performance.cpp  tool.cpp  warp_func.cpp
compilation/KernelTranslation/src/cpu/: generate_cpu_format.cpp  handle_sync.cpp  init.cpp  insert_sync.cpp  insert_warp_loop.cpp  memory_hierarchy.cpp  performance.cpp  tool.cpp  warp_func.cpp
compilation/KernelTranslation/src/x86/: generate_x86_format.cpp  global_mem_coalescing_optimization.cpp  handle_sync.cpp  init.cpp  insert_sync.cpp  insert_warp_loop.cpp  memory_hierarchy.cpp  performance.cpp  tail_block_adaptive_sync.cpp  tool.cpp  warp_func.cpp
compilation/examples/: run_example.sh
compilation/examples/reduce/: host.cpp  kernel-cuda-nvptx64-nvidia-cuda-sm_61.ll
compilation/examples/reduce_shuffle/: host.cpp  kernel-cuda-nvptx64-nvidia-cuda-sm_61.ll  run.sh
compilation/examples/vecadd/: host.cpp  kernel-cuda-nvptx64-nvidia-cuda-sm_61.ll  run.sh
docs/: CONTRIBUTING.md  workflow.md
examples/backprop/: backprop.c  backprop.h  backprop_cuda-cuda-nvptx64-nvidia-cuda-sm_61.ll  backprop_cuda-host-x86_64-unknown-linux-gnu.ll  backprop_cuda.cu  backprop_cuda_kernel.cu  facetrain.c  imagenet.c  run.sh
examples/bfs/: bfs-cuda-nvptx64-nvidia-cuda-sm_61.ll  bfs-host-x86_64-unknown-linux-gnu.ll  bfs.cu  kernel.cu  kernel2.cu  run.sh
examples/btree/: common.h  kernel_gpu_cuda_wrapper-cuda-nvptx64-nvidia-cuda-sm_61.ll  kernel_gpu_cuda_wrapper-host-x86_64-unknown-linux-gnu.ll  kernel_gpu_cuda_wrapper_2-cuda-nvptx64-nvidia-cuda-sm_61.ll  kernel_gpu_cuda_wrapper_2-host-x86_64-unknown-linux-gnu.ll  main.c  run.sh
examples/cfd/: euler3d.cu  run.sh
examples/dwt2d/: common.h  components.cu  components.h  dwt.cu  dwt.h  main.cu  run.sh  run_cpu.sh  run_nvcc.sh  test_compile_cpu.sh  test_compile_nvcc.sh
examples/dynamicSharedMemory/: reverse.cu
examples/gauss/: gaussian-cuda-nvptx64-nvidia-cuda-sm_61.ll  gaussian-host-x86_64-unknown-linux-gnu.ll  gaussian.cu  run.sh
examples/heartwall/: define.c  kernel.cu  main.cu  run.sh  setdevice.cu
examples/hotspot/: hotspot-cuda-nvptx64-nvidia-cuda-sm_61.ll  hotspot-host-x86_64-unknown-linux-gnu.ll  hotspot.cu  run.sh
examples/hotspot3D/: 3D-cuda-nvptx64-nvidia-cuda-sm_61.ll  3D-host-x86_64-unknown-linux-gnu.ll  3D.cu  run.sh
examples/huffman/: comparison_helpers.h  cpuencode.cpp  cpuencode.h  cuda_helpers.h  cutil.h  hist.cu  huffTree.h  load_data.h  main_test_cu-cuda-nvptx64-nvidia-cuda-sm_61.ll  main_test_cu-host-x86_64-unknown-linux-gnu.ll  main_test_cu.cu  pabio_kernels_v2.cu  pack_kernels.cu  parameters.h  print_helpers.h  run.sh  scan.cu  scanLargeArray_kernel.cu  stats_logger.cpp  stats_logger.h  stdafx.h  testdatagen.h  vlc_kernel_sm64huff.cu
examples/lud/: common-host-x86_64-unknown-linux-gnu.ll  lud-host-x86_64-unknown-linux-gnu.ll  lud_kernel-cuda-nvptx64-nvidia-cuda-sm_50.ll  lud_kernel-host-x86_64-unknown-linux-gnu.ll  run.sh
examples/microbench/: cudamemcpy_test.cc  dummy_kernel.cc  kerne_arg.cc  one_thread_kernel.cc
examples/myocyte/: run.sh
examples/nn/: filelist_4  nn_cuda-cuda-nvptx64-nvidia-cuda-sm_61.ll  nn_cuda-host-x86_64-unknown-linux-gnu.ll  nn_cuda.cu  run.sh
examples/nw/: needle-cuda-nvptx64-nvidia-cuda-sm_61.ll  needle-host-x86_64-unknown-linux-gnu.ll  needle.cu  needle_kernel.cu  run.sh
examples/particlefilter/: ex_particle_CUDA_naive_seq-cuda-nvptx64-nvidia-cuda-sm_61.ll  ex_particle_CUDA_naive_seq-host-x86_64-unknown-linux-gnu.ll  run.sh
examples/pathfinder/: pathfinder.cu  (+3 more)
runtime/: CMakeLists.txt
runtime/include/: cudaRuntimeImpl.h  cudaStatus.h
runtime/include/cpu/: cudaKernelImpl.h  cudaRuntimeImpl.h
runtime/include/x86/: cudaKernelImpl.h  cudaRuntimeImpl.h
runtime/lib/: cudaRuntimeImpl.cpp
runtime/src/cpu/: cudaKernelImpl.cpp  cudaRuntimeImpl.cpp
runtime/src/vortex/: cudaKernelImpl.cpp
runtime/src/x86/: cudaKernelImpl.cpp  cudaRuntimeImpl.cpp
runtime/threadPool/: CMakeLists.txt
runtime/threadPool/include/: api.h  def.h  structures.h
runtime/threadPool/include/cpu/: macros.h
runtime/threadPool/include/x86/: api.h  structures.h
runtime/threadPool/lib/: api.cpp
runtime/threadPool/src/cpu/: api.cpp
runtime/threadPool/src/x86/: api.cpp
test/: CMakeLists.txt  runHeteroMark.sh
tests/: CMakeLists.txt  runHeteroMark.sh
(+37 files in other folders)
